# SimpleURLShortener

./: README.md  app.py  database.db  init_db.py  pyproject.toml  schema.sql
templates/: base.html  index.html  stats.html
